--- a/cucumberTestDemoFramework/test-output/index.html
+++ b/cucumberTestDemoFramework/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button class="button" id="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-cucumber_practice_test">
-              <span class="suite-name border-failed">cucumber practice test</span>
+              <span class="suite-name border-passed">cucumber practice test</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -93,21 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-cucumber_practice_test" class="hide-methods failed suite-cucumber_practice_test"> (hide)</a> <!-- hide-methods failed suite-cucumber_practice_test -->
-                      <a href="#" panel-name="suite-cucumber_practice_test" class="show-methods failed suite-cucumber_practice_test"> (show)</a> <!-- show-methods failed suite-cucumber_practice_test -->
-                    </span>
-                    <div class="method-list-content failed suite-cucumber_practice_test">
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-cucumber_practice_test" title="com.practice.runner.TestRunner" hash-for-method="runScenario(&quot;Successfully login a new user after registration&quot;, &quot;Patient registration functionality for new Pati...)">runScenario("Successfully login a new user after registration", "Patient registration functionality for new Pati...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-cucumber_practice_test -->
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -118,7 +104,7 @@
                     <div class="method-list-content passed suite-cucumber_practice_test">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-cucumber_practice_test" title="com.practice.runner.TestRunner" hash-for-method="runScenario(&quot;Successfully register a new user&quot;, &quot;Patient registration functionality for new Patient&quot;)">runScenario("Successfully register a new user", "Patient registration functionality for new Patient")</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-cucumber_practice_test" title="com.practice.runner.TestRunner" hash-for-method="runScenario(&quot;Successfully login a new user after registration&quot;, &quot;Patient registration functionality for new Pati...)">runScenario("Successfully login a new user after registration", "Patient registration functionality for new Pati...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-cucumber_practice_test -->
@@ -133,9 +119,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-cucumber_practice_test" class="panel cucumber_practice_test">
-          <div class="suite-cucumber_practice_test-class-failed">
+          <div class="suite-cucumber_practice_test-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">com.practice.runner.TestRunner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -145,56 +131,6 @@
                   </a> <!-- runScenario("Successfully login a new user after registration", "Patient registration functionality for new Pati...) -->
                   <span class="method-name">runScenario</span>
                   <span class="parameters">("Successfully login a new user after registration", "Patient registration functionality for new Patient")</span>
-                  <div class="stack-trace">org.openqa.selenium.ElementClickInterceptedException: element click intercepted: Element &lt;button type=&quot;submit&quot; class=&quot;btn btn-primary Signup_button_arjust__SQlQE&quot; disabled=&quot;&quot;&gt;...&lt;/button&gt; is not clickable at point (922, 735). Other element would receive the click: &lt;div class=&quot;d-grid gap-2&quot;&gt;...&lt;/div&gt;
-  (Session info: chrome=114.0.5735.133)
-Build info: version: &apos;4.10.0&apos;, revision: &apos;c14d967899&apos;
-System info: os.name: &apos;Linux&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;5.4.0-150-generic&apos;, java.version: &apos;1.8.0_362&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [c922f00921c0770616fe0d0f9a1de98d, clickElement {id=437CAD55BB26A84007286CF6B20AF244_element_53}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 114.0.5735.133, chrome: {chromedriverVersion: 114.0.5735.90 (386bc09e8f4f..., userDataDir: /tmp/.com.google.Chrome.0UHDHg}, goog:chromeOptions: {debuggerAddress: localhost:33753}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: linux, proxy: Proxy(), se:cdp: ws://localhost:33753/devtoo..., se:cdpVersion: 114.0.5735.133, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on linux (c922f00921c0770616fe0d0f9a1de98d)] -&gt; xpath: //button[@type = &apos;submit&apos; and text() = &apos;Submit&apos;]]
-Session ID: c922f00921c0770616fe0d0f9a1de98d
-	at sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
-	at sun.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)
-	at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
-	at java.lang.reflect.Constructor.newInstance(Constructor.java:423)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:199)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:132)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:51)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:191)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:196)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:171)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:531)
-	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:242)
-	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:77)
-	at sun.reflect.GeneratedMethodAccessor20.invoke(Unknown Source)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.lang.reflect.Method.invoke(Method.java:498)
-	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:51)
-	at com.sun.proxy.$Proxy26.click(Unknown Source)
-	at com.practice.pages.LoginPage.clickOnSubmitButton(LoginPage.java:42)
-	at com.practice.stepdefs.PatientRegistrationPageStepDef.I_clicked_on_the_Submit_login_button(PatientRegistrationPageStepDef.java:84)
-	at ✽.I clicked on the Submit login button(file:///home/krishna/mPulseWorkspace/practice/src/test/resources/features/patientRegistrationpage.feature:17)
-
-</div> <!-- stack-trace -->
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-cucumber_practice_test-class-failed -->
-          <div class="suite-cucumber_practice_test-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.practice.runner.TestRunner</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Successfully register a new user&quot;, &quot;Patient registration functionality for new Patient&quot;)">
-                  </a> <!-- runScenario("Successfully register a new user", "Patient registration functionality for new Patient") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Successfully register a new user", "Patient registration functionality for new Patient")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -204,7 +140,7 @@ Session ID: c922f00921c0770616fe0d0f9a1de98d
         </div> <!-- panel cucumber_practice_test -->
         <div panel-name="test-xml-cucumber_practice_test" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/home/krishna/mPulseWorkspace/practice/src/test/resources/testng.xml</span>
+            <span class="header-content">/home/krishna/framework/framework/cucumberTestDemoFramework/src/test/resources/testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -261,15 +197,11 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'com.practice.runner.TestRunner')
-data.setCell(0, 3, 5985);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'com.practice.runner.TestRunner')
-data.setCell(1, 3, 4466);
+data.setCell(0, 3, 10145);
 window.suiteTableData['cucumber_practice_test']= { tableData: data, tableDiv: 'times-div-cucumber_practice_test'}
 return data;
 }
@@ -302,22 +234,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.practice.runner.TestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@1b45c0e)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@147a5d08)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Successfully register a new user", "Patient registration functionality for new Patient")</span>
-                <span class="method-start">499 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">runScenario("Successfully login a new user after registration", "Patient registration functionality for new Pati...)</span>
-                <span class="method-start">499 ms</span>
+                <span class="method-start">468 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">6487 ms</span>
+                <span class="method-start">10618 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
