added loginTest feature

--- a/cucumberTestDemoFramework/test-output/emailable-report.html
+++ b/cucumberTestDemoFramework/test-output/emailable-report.html
@@ -8,11 +8,21 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">cucumber practice test</th></tr>
-<tr><td><a href="#t0">Patient Registration Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,687</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">13,173</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">cucumber practice test</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Patient Registration Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.practice.runner.TestRunner</td><td><a href="#m0">runScenario</a></td><td rowspan="1">1687746950126</td><td rowspan="1">10145</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.practice.runner.TestRunner</td><td><a href="#m0">runScenario</a></td><td rowspan="1">1687763244779</td><td rowspan="1">2896</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.practice.runner.TestRunner</td><td><a href="#m1">runScenario</a></td><td rowspan="1">1687763247751</td><td rowspan="1">9708</td></tr></tbody>
 </table>
-<h2>Patient Registration Test</h2><h3 id="m0">com.practice.runner.TestRunner#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;Successfully login a new user after registration&quot;</td><td>&quot;Patient registration functionality for new Patient&quot;</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.practice.runner.TestRunner#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;Patient can login Successfully with valid username and password&quot;</td><td>&quot;Patient login functionality&quot;</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.AssertionError: expected [You have logged in successfully!] but found [Invalid! You need to register yourself before login!]
+	at org.testng.Assert.fail(Assert.java:110)
+	at org.testng.Assert.failNotEquals(Assert.java:1413)
+	at org.testng.Assert.assertEqualsImpl(Assert.java:149)
+	at org.testng.Assert.assertEquals(Assert.java:131)
+	at org.testng.Assert.assertEquals(Assert.java:655)
+	at org.testng.Assert.assertEquals(Assert.java:665)
+	at com.practice.stepdefs.PatientLoginStepDef.patient_should_be_logged_in_successfully_with_message(PatientLoginStepDef.java:59)
+	at ✽.Patient should be logged in successfully with message &quot;You have logged in successfully!&quot;(file:///home/krishna/framework/framework/cucumberTestDemoFramework/src/test/resources/features/patientLogin.feature:11)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.practice.runner.TestRunner#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;Successfully login a new user after registration&quot;</td><td>&quot;Patient registration functionality for new Patient&quot;</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
